k8s/httproute-result-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: result-route
spec:
  parentRefs:
    - name: voting-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /result
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: result
          port: 5001
